# lit-desktop

./: .gitignore  README.md  index.html  package-lock.json  package.json  start.sh
.github/workflows/: linux-build.yml  mac-dmg.yml  windows-build.yml
backend/: lit-server-entry.py  lit-server.spec
scripts/: build-brand.sh  build-linux-local.sh
src/: api.ts  brand.ts  chat-panel.ts  graph-view.ts  main.ts  markdown.ts  panel-host.ts  settings.ts  styles.css  terminal.ts  window-manager.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/binaries/: start-backend-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons-jovai/: icon.icns
src-tauri/src/: lib.rs  main.rs
